Fix autocomplete overflow in dialog.

--- a/_less/module.less
+++ b/_less/module.less
@@ -46,6 +46,7 @@
 
 .pnwim-dialog {
     z-index: 10001;
+    overflow: visible;
     .ui-state-focus {
         margin: 0;
     }
